--- a/css/main.css
+++ b/css/main.css
@@ -76,8 +76,8 @@ a {
  * Blockquotes
  */
 blockquote {
-  color: #828282;
-  border-left: 4px solid #e8e8e8;
+  color: #707070;
+  border-left: 4px solid #ccc;
   padding-left: 15px;
   font-size: 18px;
   letter-spacing: -1px;
@@ -90,17 +90,18 @@ blockquote {
  */
 pre,
 code {
-  font-size: 15px;
-  border: 1px solid #e8e8e8;
+  font-size: 14px;
+  border: 1px solid #ccc;
   border-radius: 3px;
-  background-color: #eef; }
+  background-color: #f5f5f5;
+  font-family: Consolas,Menlo,"Liberation Mono",Courier,monospace; }
 
 code {
   padding: 1px 5px; }
 
 pre {
   padding: 8px 12px;
-  overflow-x: scroll; }
+  overflow-x: auto; }
   pre > code {
     border: 0;
     padding-right: 0;
@@ -149,6 +150,7 @@ pre {
   border-top: 5px solid #424242;
   border-bottom: 1px solid #e8e8e8;
   min-height: 56px;
+  background-color: #EEEEEE;
   position: relative; }
 
 .site-title {
@@ -209,51 +211,14 @@ pre {
   border-top: 1px solid #e8e8e8;
   padding: 30px 0; }
 
-.footer-heading {
-  font-size: 18px;
-  margin-bottom: 15px; }
-
-.contact-list,
-.social-media-list {
-  list-style: none;
-  margin-left: 0; }
-
 .footer-col-wrapper {
   font-size: 15px;
   color: #828282;
   margin-left: -15px; }
 
-.footer-col {
-  float: left;
-  margin-bottom: 15px;
-  padding-left: 15px; }
+.footer-col-item {
+  text-align: center; }
 
-.footer-col-1 {
-  width: -webkit-calc(35% - (30px / 2));
-  width: calc(35% - (30px / 2)); }
-
-.footer-col-2 {
-  width: -webkit-calc(20% - (30px / 2));
-  width: calc(20% - (30px / 2)); }
-
-.footer-col-3 {
-  width: -webkit-calc(45% - (30px / 2));
-  width: calc(45% - (30px / 2)); }
-
-@media screen and (max-width: 800px) {
-  .footer-col-1,
-  .footer-col-2 {
-    width: -webkit-calc(50% - (30px / 2));
-    width: calc(50% - (30px / 2)); }
-
-  .footer-col-3 {
-    width: -webkit-calc(100% - (30px / 2));
-    width: calc(100% - (30px / 2)); } }
-@media screen and (max-width: 600px) {
-  .footer-col {
-    float: none;
-    width: -webkit-calc(100% - (30px / 2));
-    width: calc(100% - (30px / 2)); } }
 /**
  * Page content
  */
@@ -268,13 +233,28 @@ pre {
   list-style: none; }
   .post-list > li {
     margin-bottom: 30px; }
+    .post-list > li > h2 {
+      margin-bottom: 0px; }
+
+.post-comment {
+  float: right; }
+
+.post {
+  padding: 10px;
+  box-shadow: 0px 0px 5px 2px #ccc;
+  -moz-box-shadow: 0px 0px 5px 2px #ccc;
+  -webkit-box-shadow: 0px 0px 5px 2px #ccc; }
 
 .post-meta {
   font-size: 14px;
   color: #828282; }
 
+/*
+span.post-meta {
+	display: block;
+}
+*/
 .post-link {
-  display: block;
   font-size: 24px; }
 
 /**
